# Thinking-with-Types

./: .ghci  .gitignore  Readme.md  TypePrelude.hs
ch01/: CardinalityN.hs  Ch01.hs  Ch02.hs
ch02/: Cardinality.hs  CardinalityN.hs  Ch02.hs  Readme.md
ch03/: Ch03.hs  Readme.md
ch04/: Ch04.hs
ch05/: Ch05.hs  Ch05_3.hs  Expr.hs  Readme.md
ch06/: CalcRank.hs  Ch06.hs  Readme.md
ch07/: Ch07.hs  Ch07_.hs  Ch07_2.hs  Readme.md
ch08/: Ch08.hs  Readme.md
ch09/: Ch09.hs
ch10/: Ch10.hs  Ch10_2.hs
ch11/: Ch11.hs  Ch11_2.hs  ch11.cabal
ch12/: Ch12.hs  Ch12.md  Ch12_2.hs  Ch12_3.hs  ch12.cabal
ch13/: .ghci  Ch13.hs  Ch13_2.hs  Ch13_5.hs  InspectionTesting.hs  JSONSchema.hs  README.md  ch13.cabal
ch14/: IxMonad.hs  Linear.hs  ch14.cabal  ch14.md  memo.md
ch15/: Ch15.hs  Ch15_4.hs  DepPairs.hs  Example.hs  Memo.hs  Memo2.hs  Readme.html  Readme.md  Sing.hs  ch15.cabal
etc/: Infinite.hs  Qsort.hs  Tutorial.hs
