cabal-version:       >=1.10
name:                ch11
version:             0.1.0.0
license-file:        LICENSE
author:              waddlaw
maintainer:          ingronze@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Ch11, Ch11_2
  other-extensions:    AllowAmbiguousTypes, ConstraintKinds, DataKinds, FlexibleContexts, FlexibleInstances, GADTs, PolyKinds, RankNTypes, ScopedTypeVariables, TypeApplications, TypeFamilies, TypeOperators, UndecidableInstances
  build-depends:       base >=4.12 && <4.13, first-class-families, vector
  default-language:    Haskell2010
