cabal-version:       >=1.10
name:                ch15
version:             0.1.0.0
author:              waddlaw
maintainer:          ingronze@gmail.com
build-type:          Simple

library
  exposed-modules:     Ch15
  build-depends:       base >=4.12 && <4.13, constraints, transformers
  default-language:    Haskell2010

library sing
  exposed-modules:     Sing
  build-depends:       base >=4.12 && <4.13
  default-language:    Haskell2010

library ch15_4
  exposed-modules:     Ch15_4
  build-depends:       base >=4.12 && <4.13, singletons
  default-language:    Haskell2010

library deppairs
  exposed-modules:     DepPairs
  build-depends:       base >=4.12 && <4.13, aeson, constraints, singletons
  default-language:    Haskell2010